--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "rats-kingdom_frontend",
+  "name": "token-giver",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
