--- a/package.json
+++ b/package.json
@@ -4,28 +4,28 @@
   "private": false,
   "scripts": {
     "dev": "next dev",
+    "dev:https": "next dev --experimental-https",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@telegram-apps/init-data-node": "^1.2.0",
-    "@telegram-apps/sdk": "^2.9.1",
-    "@tonconnect/sdk": "^3.0.5",
+    "@telegram-apps/sdk-react": "^2.0.5",
+    "@telegram-apps/telegram-ui": "^2.1.5",
     "@tonconnect/ui-react": "^2.0.9",
-    "next": "15.0.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.4.0",
-    "react-swipeable": "^7.0.2"
+    "eruda": "^3.0.1",
+    "next": "^14.2.20",
+    "next-intl": "^3.17.6",
+    "normalize.css": "^8.0.1",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
-    "daisyui": "^4.12.20",
     "eslint": "^8",
     "eslint-config-next": "15.0.4",
     "eslint-plugin-prettier": "^5.2.1",
