--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://ton.vote",
-  "name": "TON Vote",
+  "url": "https://127.0.0.1:3000/",
+  "name": "Token Giver",
   "iconUrl": "https://ton.vote/logo.png"
 }
