--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@nextui-org/react": "^2.6.8",
+    "@nextui-org/tabs": "^2.2.5",
     "@telegram-apps/sdk-react": "^2.0.5",
     "@telegram-apps/telegram-ui": "^2.1.5",
     "@ton/core": "^0.59.0",
@@ -18,6 +20,7 @@
     "@ton/ton": "^15.1.0",
     "@tonconnect/sdk": "^3.0.5",
     "@tonconnect/ui-react": "^2.0.5",
+    "framer-motion": "^11.15.0",
     "next": "^14.2.20",
     "next-intl": "^3.17.6",
     "normalize.css": "^8.0.1",
