--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,8 @@
 {
-  "plugins": [
-    "prettier",
-    "simple-import-sort"
-  ],
+  "plugins": ["prettier", "simple-import-sort"],
   "extends": ["next/core-web-vitals", "next/typescript"],
   "rules": {
-    "@typescript-eslint/ban-ts-comment": "off"
+    "@typescript-eslint/ban-ts-comment": "off",
+    "@typescript-eslint/no-unused-vars": "off"
   }
 }
